<resources>
    <string name="app_name">WeatherApp</string>
    <string name="text_view_not_set_label">Current City not yet set</string>
    <string name="button_set_current_city">Set Current City</string>
    <string name="editTextCityName" />
    <string name="edit_text_country_name" />
    <string name="button_search_city">Search City</string>
    <string name="text_view_no_city" />
    <string name="edit_text_alert_current_city_city_name" />
    <string name="edit_text_alert_current_country_name" />
    <string name="text_view_current_city_country">Current City Country</string>
    <string name="text_view_current_weather_text">Weather Text</string>
    <string name="text_view_current_temperature">Temperature</string>
    <string name="text_view_current_updated_time">Updated Time</string>
    <string-array name="temperatureArray">
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_view_city_weather_details">details</string>
    <string name="text_view_city_weather_headline">Headline</string>
    <string name="text_view_city_weather_forecast_date">Forecast date</string>
    <string name="text_view_city_weather_temperature">Temperature</string>
    <string name="text_view_city_weather_condition">Condition</string>
    <string name="text_view_city_weather_day">Day</string>
    <string name="text_view_city_weather_night">Night</string>
    <string name="text_view_city_weather_day_text">Weather Text</string>
    <string name="text_view_city_weather_night_text">Weather Text</string>
    <string name="text_view_city_weather_more_details">Click here for more details</string>
    <string name="text_view_city_weather_extended_forecast">Click here for extended forecast</string>
    <string name="text_view_recycler">text View</string>
    <string name="text_view_city_weather_headline_bold">Headline</string>
</resources>
