<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#D3D3D3"
    tools:context="dhiraj.com.weatherapp.MainActivity">

    <TextView
        android:text="@string/text_view_not_set_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:id="@+id/textViewNotSetLabel" />

    <Button
        android:text="@string/button_set_current_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewNotSetLabel"
        android:layout_centerHorizontal="true"
        android:id="@+id/buttonSetCurrentCity" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/edit_text_country_name"
        android:ems="10"
        android:layout_below="@+id/editTextCityName"
        android:layout_alignLeft="@+id/editTextCityName"
        android:layout_alignStart="@+id/editTextCityName"
        android:id="@+id/editTextCountryName"
        android:hint="Country Name(i.e. US)" />

    <Button
        android:text="@string/button_search_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextCountryName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:id="@+id/buttonSearchCity" />

    <TextView
        android:text="@string/text_view_no_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonSearchCity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:id="@+id/textViewNoCity" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/editTextCityName"
        android:ems="10"
        android:layout_marginTop="100dp"
        android:id="@+id/editTextCityName"
        android:hint="City Name(i.e. Charlotte)"
        android:layout_below="@+id/buttonSetCurrentCity"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonSetCurrentCity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:id="@+id/progressBarCurrentCity" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/linearLayoutWeather"
        android:visibility="invisible">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewCurrentCityCountry"
            android:gravity="center"
            android:textStyle="normal|bold"
            android:textColor="#000000"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewCurrentWeatherText"
            android:layout_below="@+id/textViewCurrentCityCountry"
            android:gravity="center"
            android:textColor="#000000"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imageViewCurrentImage"
            android:layout_below="@id/textViewCurrentWeatherText"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewCurrentTemperature"
            android:layout_below="@id/imageViewCurrentImage"
            android:gravity="center"
            android:textColor="#000000"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewCurrentUpdatedTime"
            android:layout_below="@id/textViewCurrentTemperature"
            android:gravity="center"
            android:textColor="#000000"/>
</RelativeLayout>

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="380dp"
        android:id="@+id/textViewNoSavedCitiesToDisplay" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/textViewNoSavedCitiesToDisplay2" />

</RelativeLayout>
